# aboto3

./: CHANGELOG.md  README.md  noxfile.py  setup.cfg
.github/workflows/: unit-tests.yml
src/aboto3/: __init__.py  aio_client.py  aio_page_iterator.py  aio_paginator.py
tests/unit/: aio_client_test.py  conftest.py
