[metadata]
name = aboto3
version = attr: aboto3.__version__
description = Async boto3 client generator.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Brandon Temple Paul
author_email = btemplepgit@gmail.com
url = https://github.com/btemplep/aboto3
classifiers = 
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet
license = MIT
license_files = 
    LICENSE
keywords = 
    aio
    async
    asyncio
    aws
    boto3
    botocore
    sdk
python_requires = >= 3.8

[options]
package_dir=
    =src
packages = find:
install_requires =
    boto3

[options.packages.find]
where=src
exclude =
    tests

[options.extras_require]
dev = 
    build
    coverage
    moto[ssm]
    nox
    pytest
    pytest-asyncio
    pytest-cov
    twine
